--- a/vue/package.json
+++ b/vue/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12",
+    "vue3-otp-input": "^0.2.2",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
