--- a/vue/package.json
+++ b/vue/package.json
@@ -10,6 +10,7 @@
     "@headlessui/vue": "^1.4.3",
     "@heroicons/vue": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
+    "@themesberg/tailwind-datepicker": "^1.1.0",
     "animate.css": "^4.1.1",
     "axios": "^0.26.0",
     "vue": "^3.2.25",
