--- a/vue/package.json
+++ b/vue/package.json
@@ -13,6 +13,7 @@
     "@themesberg/tailwind-datepicker": "^1.1.0",
     "animate.css": "^4.1.1",
     "axios": "^0.26.0",
+    "chart.js": "^2.9.4",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12",
     "vue3-otp-input": "^0.2.2",
