--- a/vue/package.json
+++ b/vue/package.json
@@ -14,6 +14,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.26.0",
     "chart.js": "^3.7.1",
+    "cors": "^2.8.5",
     "vue": "^3.2.25",
     "vue-chart-3": "^3.1.3",
     "vue-router": "^4.0.12",
