--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=development
 APP_KEY=base64:xvycbWsh1WXDFmEnVZlTc7edWXV7qC5WZFm5AXPxjNo=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1
+APP_URL=http://mluc-votesys.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -19,7 +19,7 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
