Backend for Ballot Implementation 11052022

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=preduction
+APP_ENV=production
 APP_KEY=base64:xvycbWsh1WXDFmEnVZlTc7edWXV7qC5WZFm5AXPxjNo=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
