--- a/vue/package.json
+++ b/vue/package.json
@@ -18,6 +18,7 @@
         "chart.js": "^3.7.1",
         "cors": "^2.8.5",
         "requirejs": "^2.3.6",
+        "v-switch-case": "^1.0.3",
         "vue": "^3.2.25",
         "vue-chart-3": "^3.1.3",
         "vue-router": "^4.0.12",
