--- a/vue/package.json
+++ b/vue/package.json
@@ -21,6 +21,7 @@
         "v-switch-case": "^1.0.3",
         "vue": "^3.2.25",
         "vue-chart-3": "^3.1.3",
+        "vue-html2pdf": "^1.8.0",
         "vue-router": "^4.0.12",
         "vue3-otp-input": "^0.2.2",
         "vuex": "^4.0.2"
