--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1",
         "symfony/http-client": "^5.4",
-        "symfony/mailgun-mailer": "^5.4"
+        "symfony/mailgun-mailer": "^5.4",
+      "ext-pdo": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
