--- a/vue/package.json
+++ b/vue/package.json
@@ -9,6 +9,8 @@
     "dependencies": {
         "@headlessui/vue": "^1.4.3",
         "@heroicons/vue": "^1.0.5",
+        "@ocrv/vue-tailwind-pagination": "^0.0.4",
+        "@syncfusion/ej2-inputs": "^20.1.55",
         "@tailwindcss/forms": "^0.4.0",
         "@themesberg/tailwind-datepicker": "^1.1.0",
         "@vue/reactivity": "^3.2.31",
@@ -22,8 +24,13 @@
         "vue": "^3.2.25",
         "vue-chart-3": "^3.1.3",
         "vue-html2pdf": "^1.8.0",
+        "vue-imask": "^6.4.2",
+        "vue-masked-input": "^0.5.2",
+        "vue-r-mask": "^1.2.3",
         "vue-router": "^4.0.12",
+        "vue-the-mask": "^0.11.1",
         "vue3-otp-input": "^0.2.2",
+        "vuejs-paginate-next": "^1.0.2",
         "vuex": "^4.0.2"
     },
     "devDependencies": {
